feat: add ride-service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       dockerfile: Dockerfile
     container_name: ridehail-ride-service
     environment:
-      DB_HOST: postgres
+      DB_HOST: 127.0.0.1
       DB_PORT: 5432
       DB_USER: ridehail_user
       DB_PASS: ridehail_pass
