--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init-db.sh:/docker-entrypoint-initdb.d/01-init.sh:ro
-      - ../../../migrations/driver_location_service.sql:/docker-entrypoint-initdb.d/02-driver-location.sql:ro
+      - ./migrations/ride_service.sql:/docker-entrypoint-initdb.d/ride_service.sql:ro
+      - ./migrations/driver_location_service.sql:/docker-entrypoint-initdb.d/driver_location_service.sql:ro
     networks:
       - driver-location-network
     healthcheck:
@@ -66,14 +66,14 @@ services:
   # Driver Location Service
   driver-location-service:
     build:
-      context: ../../..
+      context: .
       dockerfile: ./services/driver_location_service/Dockerfile
     container_name: driver-location-service
     hostname: driver-location-service
     environment:
       # Server Configuration
       HOST: 0.0.0.0
-      PORT: 8082
+      PORT: 3001
 
       # Database Configuration
       DATABASE_URL: postgres://postgres:postgres@postgres:5432/ride_hail?sslmode=disable
@@ -114,7 +114,7 @@ services:
       HTTP_WRITE_TIMEOUT: 10s
       HTTP_IDLE_TIMEOUT: 120s
     ports:
-      - "8082:8082"
+      - "3001:3001"
     networks:
       - driver-location-network
     depends_on:
@@ -123,7 +123,7 @@ services:
       rabbitmq:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8082/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
       interval: 30s
       timeout: 3s
       retries: 3
