--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,9 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./migrations/ride_service.sql:/docker-entrypoint-initdb.d/ride_service.sql:ro
-      - ./migrations/driver_location_service.sql:/docker-entrypoint-initdb.d/driver_location_service.sql:ro
+      - ./migrations/01_ride_service.sql:/docker-entrypoint-initdb.d/01_ride_service.sql:ro
+      - ./migrations/02_driver_location_service.sql:/docker-entrypoint-initdb.d/02_driver_location_service.sql:ro
+      - ./migrations/03_mock_data.sql:/docker-entrypoint-initdb.d/03_mock_data.sql:ro
     networks:
       - driver-location-network
     healthcheck:
@@ -71,48 +72,24 @@ services:
     container_name: driver-location-service
     hostname: driver-location-service
     environment:
-      # Server Configuration
-      HOST: 0.0.0.0
-      PORT: 3001
+      # Service configuration
+      DRIVER_LOCATION_SERVICE: 3001
 
-      # Database Configuration
-      DATABASE_URL: postgres://postgres:postgres@postgres:5432/ride_hail?sslmode=disable
-      DB_MAX_CONNS: 25
-      DB_MIN_CONNS: 5
+      # Database configuration (consumed via pkg/config)
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASS: postgres
+      DB_NAME: ride_hail
 
-      # RabbitMQ Configuration
-      RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672/
-      RABBITMQ_EXCHANGE_RIDE: ride_topic
-      RABBITMQ_EXCHANGE_DRIVER: driver_topic
-      RABBITMQ_EXCHANGE_LOCATION: location_fanout
-      RABBITMQ_QUEUE_MATCHING: driver_matching
-      RABBITMQ_QUEUE_STATUS: ride_status_update
+      # RabbitMQ configuration
+      RABBITMQ_HOST: rabbitmq
+      RABBITMQ_PORT: 5672
+      RABBITMQ_USER: guest
+      RABBITMQ_PASS: guest
 
-      # Logging
-      LOG_LEVEL: INFO
-
-      # Rate Limiting
-      RATE_LIMIT_LOCATION_INTERVAL: 3s
-      RATE_LIMIT_LOCATION_CAPACITY: 1
-
-      # WebSocket Configuration
-      WS_PING_PERIOD: 54s
-      WS_PONG_WAIT: 60s
-      WS_WRITE_WAIT: 10s
-      WS_MAX_MESSAGE_SIZE: 524288
-
-      # PostGIS Configuration
-      DEFAULT_SEARCH_RADIUS_KM: 5.0
-      MAX_NEARBY_DRIVERS: 10
-
-      # Service Configuration
-      SERVICE_NAME: driver-location-service
-      SHUTDOWN_TIMEOUT: 30s
-
-      # Timeouts
-      HTTP_READ_TIMEOUT: 10s
-      HTTP_WRITE_TIMEOUT: 10s
-      HTTP_IDLE_TIMEOUT: 120s
+      # WebSocket configuration
+      WEBSOCKET_PORT: 8080
     ports:
       - "3001:3001"
     networks:
