--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,6 +138,37 @@ services:
       start_period: 40s
     restart: unless-stopped
 
+  auth-service:
+    build:
+      context: .
+      dockerfile: ./cmd/auth-service/Dockerfile
+    container_name: ridehail-auth-service
+
+    env_file:
+      - .env
+
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: ridehail_user
+      DB_PASS: ridehail_pass
+      DB_NAME: ridehail_db
+      AUTH_SERVICE_PORT: 3005
+    ports:
+      - "3005:3005"
+    networks:
+      - ridehail-network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3005/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+
 # ============================================
 # Admin Service (Port 3004) - Optional
 # Handles: monitoring, metrics, admin dashboard
